@@ -5,4 +5,21 @@ config.h.in
 configure
 doc/Makefile.in
 src/Makefile.in
-
+Makefile
+_configs.sed
+config.h
+config.log
+config.status
+doc/Makefile
+doc/convert_examples.tcl
+doc/graphics
+doc/html/
+libtool
+rivet_config.h
+src/Makefile
+src/librivet/.deps/
+src/mod_rivet_ng/.deps/
+src/parser/.deps/
+src/request/.deps/
+stamp-h1
+*~
